@@ -4,6 +4,9 @@ History of this buildout
 5.1.14 (unreleased)
 -------------------
 
+- Move redundant top level folders into an unpublished folder.
+  [coen]
+
 - Add migrate step to move content to theme folders and subfolders
   [coen]
 
